--- a/src/App.css
+++ b/src/App.css
@@ -81,12 +81,14 @@ button {
   background: linear-gradient(to bottom right, orange, yellow);
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   border-radius: 9px;
+  margin: 5px;
+  color: black;
 
 }
 .button:hover{
   background: linear-gradient(to bottom right, blue, red);
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  color: white;
+  color: black;
   cursor: grab;
 }
 body{
